[gd_scene load_steps=5 format=3 uid="uid://d0ctjoyoytgfi"]

[ext_resource type="Script" path="res://tests/SessionClientUI.gd" id="1_omohi"]
[ext_resource type="Script" path="res://networking/SessionClient.gd" id="2_8hjeq"]
[ext_resource type="Script" path="res://tests/SessionServerUI.gd" id="2_44vxu"]
[ext_resource type="Script" path="res://networking/SessionServer.gd" id="3_m60eb"]

[node name="SessionTest" type="Node"]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SessionClientUI" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
script = ExtResource("1_omohi")

[node name="ConnectToUrl" type="Button" parent="MarginContainer/HBoxContainer/SessionClientUI"]
layout_mode = 2
text = "Connect to url"

[node name="Host" type="Button" parent="MarginContainer/HBoxContainer/SessionClientUI"]
layout_mode = 2
text = "Host"

[node name="SessionCode" type="LineEdit" parent="MarginContainer/HBoxContainer/SessionClientUI"]
layout_mode = 2
placeholder_text = "Session Code"

[node name="Join" type="Button" parent="MarginContainer/HBoxContainer/SessionClientUI"]
layout_mode = 2
text = "Join"

[node name="Seal" type="Button" parent="MarginContainer/HBoxContainer/SessionClientUI"]
layout_mode = 2
text = "Seal"

[node name="WaitForReady" type="Button" parent="MarginContainer/HBoxContainer/SessionClientUI"]
layout_mode = 2
text = "Wait for ready"

[node name="Leave" type="Button" parent="MarginContainer/HBoxContainer/SessionClientUI"]
layout_mode = 2
text = "Leave"

[node name="SessionClient" type="Node" parent="MarginContainer/HBoxContainer/SessionClientUI"]
script = ExtResource("2_8hjeq")

[node name="SessionServerUI" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
script = ExtResource("2_44vxu")

[node name="StartServer" type="Button" parent="MarginContainer/HBoxContainer/SessionServerUI"]
layout_mode = 2
text = "Start Server"

[node name="Output" type="TextEdit" parent="MarginContainer/HBoxContainer/SessionServerUI"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
editable = false

[node name="SessionServer" type="Node" parent="MarginContainer/HBoxContainer/SessionServerUI"]
script = ExtResource("3_m60eb")

[connection signal="pressed" from="MarginContainer/HBoxContainer/SessionClientUI/ConnectToUrl" to="MarginContainer/HBoxContainer/SessionClientUI" method="_on_connect_to_url_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SessionClientUI/Host" to="MarginContainer/HBoxContainer/SessionClientUI" method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SessionClientUI/Join" to="MarginContainer/HBoxContainer/SessionClientUI" method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SessionClientUI/Seal" to="MarginContainer/HBoxContainer/SessionClientUI" method="_on_seal_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SessionClientUI/WaitForReady" to="MarginContainer/HBoxContainer/SessionClientUI" method="_on_wait_for_ready_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SessionClientUI/Leave" to="MarginContainer/HBoxContainer/SessionClientUI" method="_on_leave_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SessionServerUI/StartServer" to="MarginContainer/HBoxContainer/SessionServerUI" method="_on_start_server_pressed"]
